--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "node": "v22.5.1"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.7"
   }
 }
